<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:padding="@dimen/padding_standard">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:padding="0dp"
        android:layout_margin="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="0dp"
            android:layout_margin="0dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/settings_back"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:padding="0dp"
                android:layout_margin="0dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/action_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:text="@string/settings_text"
                android:textColor="@color/black"
                android:textSize="@dimen/header_text_size2"
                android:textStyle="bold" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:orientation="vertical"
            android:padding="0dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_top">

                <TextView
                    android:id="@+id/tvDarkTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dark_theme"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <Switch
                    android:id="@+id/switchDarkTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:thumbTint="@drawable/switch_thumb"
                    android:trackTint="@drawable/switch_track"
                    tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tvShareApp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/share_app"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <ImageView
                    android:id="@+id/ivShareApp"
                    android:layout_width="@dimen/layout_width_50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/share"
                    tools:ignore="ContentDescription,ImageContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tvSupport"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/support"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <ImageView
                    android:id="@+id/ivSupport"
                    android:layout_width="@dimen/layout_width_50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/support"
                    tools:ignore="ContentDescription,ImageContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tvUserAgreement"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/user_agreement"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <ImageView
                    android:id="@+id/ivUserAgreement"
                    android:layout_width="@dimen/layout_width_50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/info_user"
                    tools:ignore="ContentDescription,ImageContrastCheck" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</GridLayout>
